--- a/Models/AW139.ac
+++ b/Models/AW139.ac
@@ -2,8 +2,8 @@ AC3Db
 MATERIAL "fuselage" rgb 1.000 1.000 1.000  amb 0.800 0.800 0.800  emis 0.000 0.000 0.000  spec 1.000 1.000 1.000  shi 32 trans 0.000
 MATERIAL "glas" rgb 0.900 0.900 0.900  amb 0.800 0.800 0.800  emis 0.000 0.000 0.000  spec 1.000 1.000 1.000  shi 128 trans 0.800
 OBJECT world
-name "Blender_exporter_v3.3__AW139_1.ac"
-kids 64
+name "Blender_exporter_v3.3__AW139.ac"
+kids 65
 OBJECT poly
 name "airintake"
 data 9
@@ -73072,352 +73072,6 @@ refs 4
 106 0.277297 0.539367
 kids 0
 OBJECT poly
-name "sideglass"
-data 9
-sideglass
-crease 61.0
-numvert 50
--1.30269 -0.40579 1.1074
--1.30269 -0.40579 -1.08871
--1.44471 -0.49575 1.11898
--1.44471 -0.49575 -1.10029
--1.41883 -0.5228 1.12247
--1.41883 -0.5228 -1.10378
--1.4617 -0.40579 1.1074
--1.4617 -0.40579 -1.08871
--0.98421 -0.40579 1.1074
--0.98421 -0.40579 -1.08871
--1.30269 0.12112 1.0396
--1.30269 0.12112 -1.02089
--1.34799 0.11987 1.03976
--1.34799 0.11987 -1.02105
--1.39493 0.11186 1.04079
--1.39493 0.11186 -1.02208
--1.42681 0.09326 1.04318
--1.42681 0.09326 -1.02447
--1.45436 0.06255 1.04714
--1.45436 0.06255 -1.02843
--1.46122 0.0104 1.05385
--1.46122 0.0104 -1.03514
--1.09951 0.12247 1.03942
--1.09951 0.12247 -1.02071
--1.05168 0.11571 1.04029
--1.05168 0.11571 -1.02158
--1.01973 0.09784 1.04259
--1.01973 0.09784 -1.02388
--0.99309 0.06642 1.04664
--0.99309 0.06642 -1.02793
--0.98421 0.02552 1.0519
--0.98421 0.02552 -1.03319
--1.30269 -0.55155 1.12617
--1.30269 -0.55155 -1.10748
--1.39092 -0.54196 1.12493
--1.39092 -0.54196 -1.10624
--1.34644 -0.55147 1.12616
--1.34644 -0.55147 -1.10747
--0.98537 -0.46556 1.1151
--0.98537 -0.46556 -1.09641
--0.99712 -0.49965 1.11949
--0.99712 -0.49965 -1.1008
--1.02245 -0.52894 1.12326
--1.02245 -0.52894 -1.10457
--1.05779 -0.54389 1.12518
--1.05779 -0.54389 -1.10649
--1.10495 -0.5514 1.12615
--1.10495 -0.5514 -1.10746
--1.46024 -0.46062 1.11319
--1.46024 -0.46062 -1.0945
-numsurf 48
-SURF 0X10
-mat 1
-refs 3
-4 0 0
-0 1 0
-2 1 1
-SURF 0X10
-mat 1
-refs 3
-3 0 0
-1 1 0
-5 1 1
-SURF 0X10
-mat 1
-refs 3
-12 0 0
-0 1 0
-10 1 1
-SURF 0X10
-mat 1
-refs 3
-11 0 0
-1 1 0
-13 1 1
-SURF 0X10
-mat 1
-refs 3
-14 0 0
-0 1 0
-12 1 1
-SURF 0X10
-mat 1
-refs 3
-13 0 0
-1 1 0
-15 1 1
-SURF 0X10
-mat 1
-refs 3
-16 0 0
-0 1 0
-14 1 1
-SURF 0X10
-mat 1
-refs 3
-15 0 0
-1 1 0
-17 1 1
-SURF 0X10
-mat 1
-refs 3
-18 0 0
-0 1 0
-16 1 1
-SURF 0X10
-mat 1
-refs 3
-17 0 0
-1 1 0
-19 1 1
-SURF 0X10
-mat 1
-refs 3
-20 0 0
-0 1 0
-18 1 1
-SURF 0X10
-mat 1
-refs 3
-19 0 0
-1 1 0
-21 1 1
-SURF 0X10
-mat 1
-refs 3
-6 0 0
-0 1 0
-20 1 1
-SURF 0X10
-mat 1
-refs 3
-21 0 0
-1 1 0
-7 1 1
-SURF 0X10
-mat 1
-refs 3
-10 0 0
-0 1 0
-22 1 1
-SURF 0X10
-mat 1
-refs 3
-23 0 0
-1 1 0
-11 1 1
-SURF 0X10
-mat 1
-refs 3
-22 0 0
-0 1 0
-24 1 1
-SURF 0X10
-mat 1
-refs 3
-25 0 0
-1 1 0
-23 1 1
-SURF 0X10
-mat 1
-refs 3
-24 0 0
-0 1 0
-26 1 1
-SURF 0X10
-mat 1
-refs 3
-27 0 0
-1 1 0
-25 1 1
-SURF 0X10
-mat 1
-refs 3
-26 0 0
-0 1 0
-28 1 1
-SURF 0X10
-mat 1
-refs 3
-29 0 0
-1 1 0
-27 1 1
-SURF 0X10
-mat 1
-refs 3
-28 0 0
-0 1 0
-30 1 1
-SURF 0X10
-mat 1
-refs 3
-31 0 0
-1 1 0
-29 1 1
-SURF 0X10
-mat 1
-refs 3
-30 0 0
-0 1 0
-8 1 1
-SURF 0X10
-mat 1
-refs 3
-9 0 0
-1 1 0
-31 1 1
-SURF 0X10
-mat 1
-refs 3
-34 0 0
-0 1 0
-4 1 1
-SURF 0X10
-mat 1
-refs 3
-5 0 0
-1 1 0
-35 1 1
-SURF 0X10
-mat 1
-refs 3
-36 0 0
-0 1 0
-34 1 1
-SURF 0X10
-mat 1
-refs 3
-35 0 0
-1 1 0
-37 1 1
-SURF 0X10
-mat 1
-refs 3
-32 0 0
-0 1 0
-36 1 1
-SURF 0X10
-mat 1
-refs 3
-37 0 0
-1 1 0
-33 1 1
-SURF 0X10
-mat 1
-refs 3
-8 0 0
-0 1 0
-38 1 1
-SURF 0X10
-mat 1
-refs 3
-39 0 0
-1 1 0
-9 1 1
-SURF 0X10
-mat 1
-refs 3
-38 0 0
-0 1 0
-40 1 1
-SURF 0X10
-mat 1
-refs 3
-41 0 0
-1 1 0
-39 1 1
-SURF 0X10
-mat 1
-refs 3
-40 0 0
-0 1 0
-42 1 1
-SURF 0X10
-mat 1
-refs 3
-43 0 0
-1 1 0
-41 1 1
-SURF 0X10
-mat 1
-refs 3
-42 0 0
-0 1 0
-44 1 1
-SURF 0X10
-mat 1
-refs 3
-45 0 0
-1 1 0
-43 1 1
-SURF 0X10
-mat 1
-refs 3
-44 0 0
-0 1 0
-46 1 1
-SURF 0X10
-mat 1
-refs 3
-47 0 0
-1 1 0
-45 1 1
-SURF 0X10
-mat 1
-refs 3
-46 0 0
-0 1 0
-32 1 1
-SURF 0X10
-mat 1
-refs 3
-33 0 0
-1 1 0
-47 1 1
-SURF 0X10
-mat 1
-refs 3
-0 0 0
-48 1 0
-2 1 1
-SURF 0X10
-mat 1
-refs 3
-3 0 0
-49 1 0
-1 1 1
-SURF 0X10
-mat 1
-refs 3
-0 0 0
-6 1 0
-48 1 1
-SURF 0X10
-mat 1
-refs 3
-49 0 0
-7 1 0
-1 1 1
-kids 0
-OBJECT poly
 name "sideglass_L"
 data 13
 sideglass.001
@@ -74844,6 +74498,360 @@ refs 4
 1 1 0
 103 1 1
 99 0 1
+kids 0
+OBJECT poly
+name "sideglassL"
+data 9
+sideglass
+crease 61.0
+numvert 25
+-1.30269 -0.40579 1.1074
+-1.44471 -0.49575 1.11898
+-1.41883 -0.5228 1.12247
+-1.4617 -0.40579 1.1074
+-0.98421 -0.40579 1.1074
+-1.30269 0.12112 1.0396
+-1.34799 0.11987 1.03976
+-1.39493 0.11186 1.04079
+-1.42681 0.09326 1.04318
+-1.45436 0.06255 1.04714
+-1.46122 0.0104 1.05385
+-1.09951 0.12247 1.03942
+-1.05168 0.11571 1.04029
+-1.01973 0.09784 1.04259
+-0.99309 0.06642 1.04664
+-0.98421 0.02552 1.0519
+-1.30269 -0.55155 1.12617
+-1.39092 -0.54196 1.12493
+-1.34644 -0.55147 1.12616
+-0.98537 -0.46556 1.1151
+-0.99712 -0.49965 1.11949
+-1.02245 -0.52894 1.12326
+-1.05779 -0.54389 1.12518
+-1.10495 -0.5514 1.12615
+-1.46024 -0.46062 1.11319
+numsurf 24
+SURF 0X10
+mat 1
+refs 3
+2 0 0
+0 1 0
+1 1 1
+SURF 0X10
+mat 1
+refs 3
+6 0 0
+0 1 0
+5 1 1
+SURF 0X10
+mat 1
+refs 3
+7 0 0
+0 1 0
+6 1 1
+SURF 0X10
+mat 1
+refs 3
+8 0 0
+0 1 0
+7 1 1
+SURF 0X10
+mat 1
+refs 3
+9 0 0
+0 1 0
+8 1 1
+SURF 0X10
+mat 1
+refs 3
+10 0 0
+0 1 0
+9 1 1
+SURF 0X10
+mat 1
+refs 3
+3 0 0
+0 1 0
+10 1 1
+SURF 0X10
+mat 1
+refs 3
+5 0 0
+0 1 0
+11 1 1
+SURF 0X10
+mat 1
+refs 3
+11 0 0
+0 1 0
+12 1 1
+SURF 0X10
+mat 1
+refs 3
+12 0 0
+0 1 0
+13 1 1
+SURF 0X10
+mat 1
+refs 3
+13 0 0
+0 1 0
+14 1 1
+SURF 0X10
+mat 1
+refs 3
+14 0 0
+0 1 0
+15 1 1
+SURF 0X10
+mat 1
+refs 3
+15 0 0
+0 1 0
+4 1 1
+SURF 0X10
+mat 1
+refs 3
+17 0 0
+0 1 0
+2 1 1
+SURF 0X10
+mat 1
+refs 3
+18 0 0
+0 1 0
+17 1 1
+SURF 0X10
+mat 1
+refs 3
+16 0 0
+0 1 0
+18 1 1
+SURF 0X10
+mat 1
+refs 3
+4 0 0
+0 1 0
+19 1 1
+SURF 0X10
+mat 1
+refs 3
+19 0 0
+0 1 0
+20 1 1
+SURF 0X10
+mat 1
+refs 3
+20 0 0
+0 1 0
+21 1 1
+SURF 0X10
+mat 1
+refs 3
+21 0 0
+0 1 0
+22 1 1
+SURF 0X10
+mat 1
+refs 3
+22 0 0
+0 1 0
+23 1 1
+SURF 0X10
+mat 1
+refs 3
+23 0 0
+0 1 0
+16 1 1
+SURF 0X10
+mat 1
+refs 3
+0 0 0
+24 1 0
+1 1 1
+SURF 0X10
+mat 1
+refs 3
+0 0 0
+3 1 0
+24 1 1
+kids 0
+OBJECT poly
+name "sideglassR"
+data 13
+sideglass.003
+crease 61.0
+numvert 25
+-1.30269 -0.40579 -1.08871
+-1.44471 -0.49575 -1.10029
+-1.41883 -0.5228 -1.10378
+-1.4617 -0.40579 -1.08871
+-0.98421 -0.40579 -1.08871
+-1.30269 0.12112 -1.02089
+-1.34799 0.11987 -1.02105
+-1.39493 0.11186 -1.02208
+-1.42681 0.09326 -1.02447
+-1.45436 0.06255 -1.02843
+-1.46122 0.0104 -1.03514
+-1.09951 0.12247 -1.02071
+-1.05168 0.11571 -1.02158
+-1.01973 0.09784 -1.02388
+-0.99309 0.06642 -1.02793
+-0.98421 0.02552 -1.03319
+-1.30269 -0.55155 -1.10748
+-1.39092 -0.54196 -1.10624
+-1.34644 -0.55147 -1.10747
+-0.98537 -0.46556 -1.09641
+-0.99712 -0.49965 -1.1008
+-1.02245 -0.52894 -1.10457
+-1.05779 -0.54389 -1.10649
+-1.10495 -0.5514 -1.10746
+-1.46024 -0.46062 -1.0945
+numsurf 24
+SURF 0X10
+mat 1
+refs 3
+1 0 0
+0 1 0
+2 1 1
+SURF 0X10
+mat 1
+refs 3
+5 0 0
+0 1 0
+6 1 1
+SURF 0X10
+mat 1
+refs 3
+6 0 0
+0 1 0
+7 1 1
+SURF 0X10
+mat 1
+refs 3
+7 0 0
+0 1 0
+8 1 1
+SURF 0X10
+mat 1
+refs 3
+8 0 0
+0 1 0
+9 1 1
+SURF 0X10
+mat 1
+refs 3
+9 0 0
+0 1 0
+10 1 1
+SURF 0X10
+mat 1
+refs 3
+10 0 0
+0 1 0
+3 1 1
+SURF 0X10
+mat 1
+refs 3
+11 0 0
+0 1 0
+5 1 1
+SURF 0X10
+mat 1
+refs 3
+12 0 0
+0 1 0
+11 1 1
+SURF 0X10
+mat 1
+refs 3
+13 0 0
+0 1 0
+12 1 1
+SURF 0X10
+mat 1
+refs 3
+14 0 0
+0 1 0
+13 1 1
+SURF 0X10
+mat 1
+refs 3
+15 0 0
+0 1 0
+14 1 1
+SURF 0X10
+mat 1
+refs 3
+4 0 0
+0 1 0
+15 1 1
+SURF 0X10
+mat 1
+refs 3
+2 0 0
+0 1 0
+17 1 1
+SURF 0X10
+mat 1
+refs 3
+17 0 0
+0 1 0
+18 1 1
+SURF 0X10
+mat 1
+refs 3
+18 0 0
+0 1 0
+16 1 1
+SURF 0X10
+mat 1
+refs 3
+19 0 0
+0 1 0
+4 1 1
+SURF 0X10
+mat 1
+refs 3
+20 0 0
+0 1 0
+19 1 1
+SURF 0X10
+mat 1
+refs 3
+21 0 0
+0 1 0
+20 1 1
+SURF 0X10
+mat 1
+refs 3
+22 0 0
+0 1 0
+21 1 1
+SURF 0X10
+mat 1
+refs 3
+23 0 0
+0 1 0
+22 1 1
+SURF 0X10
+mat 1
+refs 3
+16 0 0
+0 1 0
+23 1 1
+SURF 0X10
+mat 1
+refs 3
+1 0 0
+24 1 0
+0 1 1
+SURF 0X10
+mat 1
+refs 3
+24 0 0
+3 1 0
+0 1 1
 kids 0
 OBJECT poly
 name "stabilizer"
